--- a/tuDoApp-web.project.json
+++ b/tuDoApp-web.project.json
@@ -2,7 +2,7 @@
   "version": "3.0.0",
   "type": "project",
   "project": {
-    "name": "Example06 Web",
+    "name": "tuDoApp Web",
     "environments": [
       {
         "name": "Production",
