--- a/todoapp-presentation/src/main/angular/angular.json
+++ b/todoapp-presentation/src/main/angular/angular.json
@@ -31,7 +31,7 @@
               "src/assets"
             ],
             "styles": [
-              "./node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css",
+              "src/theme.scss",
               "src/styles.sass"
             ],
             "scripts": []
@@ -104,7 +104,7 @@
               "src/assets"
             ],
             "styles": [
-              "./node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css",
+              "src/theme.scss",
               "src/styles.sass"
             ],
             "scripts": []
